# family-budget

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  README.md  alembic.ini  docker-compose.override.yml  docker-compose.yml  fly.toml  pyproject.toml
.claude/: launch.json
.github/: dependabot.yml
.github/workflows/: ci.yml  dependabot-auto-merge.yml  deploy.yml  sync-develop.yml
alembic/: env.py
alembic/versions/: 32145f8e6114_wallets_and_transactions.py  38f71820edf1_baseline_users_and_families.py  745d33d56c6a_user_roles_and_invitations.py  9f3c1a7b2d04_account_soft_delete.py  a1b2c3d4e5f6_wallet_visibility.py  a2f4c6e8b913_fix_oracle_column_widths.py  a7d9f1c4e682_transaction_transfer_group.py  b2e4c6a8d135_user_google_sub.py  b3d5f7a9c024_multi_currency.py  b8e2d4f6a019_wallet_icon_color.py  c1d2e3f4a5b6_admin_foundation.py  c3f5d7b9e246_invitation_phone.py  c9f3a1b7d240_nullable_family_id.py  d1a4c7e8b362_personal_categories_budgets.py  d4a6e8c1f357_user_phone.py  e5b7f9d2a468_invitation_target_user.py  e7d9b2f4c581_backfill_personal_categories.py  f6c8e0a3b571_budgets.py  f6c8e0a3b579_categories.py  f8e1c3a5d692_wallet_created_by.py
app/: main.py
app/core/: celery_app.py  config.py  currency.py  database.py  deps.py  google.py  phone.py  security.py
app/domains/account/: maintenance.py
app/domains/admin/: deps_panel.py  models.py  money.py  pagination.py  repository.py  router.py  security.py  service.py
app/domains/auth/: repository.py  router.py  schemas.py  service.py
app/domains/budgets/: models.py  repository.py  router.py  schemas.py  service.py
app/domains/categories/: defaults.py  models.py  repository.py  router.py  schemas.py  service.py
app/domains/dashboard/: router.py  schemas.py  service.py
app/domains/families/: repository.py  router.py  schemas.py  service.py
app/domains/health/: router.py
app/domains/invitations/: models.py  repository.py  router.py  schemas.py  service.py
app/domains/legal/: router.py
app/domains/rates/: models.py  repository.py  router.py  schemas.py  (+2 more)
app/scripts/: create_admin.py
scripts/: create_schema.sql  fly_entrypoint.sh
tests/: conftest.py  test_account.py  test_admin.py  test_auth.py  test_budgets.py  test_categories.py  test_cross_scope_transfers.py  test_display_currency.py  test_families.py  test_google_auth.py  test_health.py  test_invitations.py  test_invite_existing.py  test_multi_currency.py  test_phone.py  test_rates.py  test_stats.py  test_transaction_edit_filter.py  test_transactions.py  test_transfers.py  test_wallet_delete.py  test_wallet_privacy.py  test_wallets.py
(+62 files in other folders)
