[project]
name = "family-budget"
version = "0.1.0"
description = "Family expense tracker — FastAPI + SQLAlchemy + Oracle ADB backend"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.139.0",
    "uvicorn[standard]>=0.51.0",
    # Admin panel: server-rendered templates + signed session cookies, with the
    # stylesheet compiled from SCSS (styles/*.scss → static/admin.css) at startup.
    "jinja2>=3.1.6",
    "itsdangerous>=2.2.0",
    "libsass>=0.23.0",
    "sqlalchemy>=2.0.51",
    "oracledb>=4.0.2",
    "alembic>=1.18.5",
    "pydantic[email]>=2.13.4",
    "pydantic-settings>=2.14.2",
    "phonenumbers>=9.0.34",
    "python-jose[cryptography]>=3.5.0",
    "google-auth>=2.56.0",
    "requests>=2.34.2",
    "bcrypt>=5.0.0",
    "python-multipart>=0.0.32",
    "python-ulid>=3.1.0",
    "celery>=5.6.3",
    "redis>=8.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.1.1",
    "httpx>=0.28.1",
    "ruff>=0.15.21",
    "mypy>=2.3.0",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
plugins = ["pydantic.mypy"]
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]
